force-app/main/default/objects/Part__c/Part__c.object-meta.xml
<CustomObject>
    <description>Service Cloud : It contains all the Parts (including Full System) that can be RMAed. It contains basically the Product Family, Part Number, Description and Replacement Type. During RMA, the product family is matched up from Customer&apos;s Entitlements and specific part that needs to be RMAed is pulled from this object.</description>
    <label>Part</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>