force-app/main/default/objects/Part__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>SDS-1632 Service: Disable parts for RMA. Only specific users should be able to specify if a part is active or inactive</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>