force-app/main/default/objects/Part__c/fields/Component_Part_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Part_Name__c</fullName>
    <label>Component Part Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>