force-app/main/default/objects/Part__c/fields/CompPN__c.field-meta.xml
<CustomField>
    <fullName>CompPN__c</fullName>
    <label>CompPN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>