force-app/main/default/objects/Part__c/fields/Full_System__c.field-meta.xml
<CustomField>
    <fullName>Full_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full System</label>
    <type>Checkbox</type>
</CustomField>