force-app/main/default/objects/Part__c/fields/MFGLine__c.field-meta.xml
<CustomField>
    <fullName>MFGLine__c</fullName>
    <label>MFGLine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>