force-app/main/default/objects/Part__c/fields/Orderable__c.field-meta.xml
<CustomField>
    <fullName>Orderable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>SDS-1632 Service: Disable parts for RMA. Only specific users should be able to specify if a part is orderable.</description>
    <label>Orderable</label>
    <type>Checkbox</type>
</CustomField>