force-app/main/default/objects/Part__c/fields/Part_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Part_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Part Identifier</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>