force-app/main/default/objects/Part__c/fields/Part_Name_Number_formula__c.field-meta.xml
<CustomField>
    <fullName>Part_Name_Number_formula__c</fullName>
    <description>SDS-3141 Service: Revised Parts for RMA</description>
    <formula>Name &amp; &apos; - &apos; &amp;  Part_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Name Number formula</label>
    <type>Text</type>
</CustomField>