force-app/main/default/objects/Part__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>CPU Products</fullName>
            </value>
            <value>
                <fullName>CUDA Services</fullName>
            </value>
            <value>
                <fullName>DGX-1 Pascal Product Family</fullName>
            </value>
            <value>
                <fullName>DGX-1 Volta Product Family</fullName>
            </value>
            <value>
                <fullName>DGX-2 Volta Product Family</fullName>
            </value>
            <value>
                <fullName>DGX A100</fullName>
            </value>
            <value>
                <fullName>DGX Station A100</fullName>
            </value>
            <value>
                <fullName>DGX Station Product Family</fullName>
            </value>
            <value>
                <fullName>Drive Constellation</fullName>
            </value>
            <value>
                <fullName>Embedded Entertainment</fullName>
            </value>
            <value>
                <fullName>GRID Hardware</fullName>
            </value>
            <value>
                <fullName>GRID SW PERPETUAL</fullName>
            </value>
            <value>
                <fullName>GRID SW RENEWAL</fullName>
            </value>
            <value>
                <fullName>GRID SW SUBSCRIPTION</fullName>
            </value>
            <value>
                <fullName>GRID SW SUMS</fullName>
            </value>
            <value>
                <fullName>NGC Support Service - DSWS</fullName>
            </value>
            <value>
                <fullName>NGC Support Service - T4</fullName>
            </value>
            <value>
                <fullName>NGC Support Service - V100</fullName>
            </value>
            <value>
                <fullName>Notebook</fullName>
            </value>
            <value>
                <fullName>NVIDIA Professional Services</fullName>
            </value>
            <value>
                <fullName>Quadro Desktop - EP</fullName>
            </value>
            <value>
                <fullName>Quadro Desktop - HE</fullName>
            </value>
            <value>
                <fullName>Quadro Desktop - MR</fullName>
            </value>
            <value>
                <fullName>Quadro Desktop - NVS</fullName>
            </value>
            <value>
                <fullName>Quadro Desktop - UHE</fullName>
            </value>
            <value>
                <fullName>Quadro Industry Solution</fullName>
            </value>
            <value>
                <fullName>Quadro K20/K40</fullName>
            </value>
            <value>
                <fullName>Quadro Mobile - HE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>