force-app/main/default/objects/Part__c/fields/Replacement_Type__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Type__c</fullName>
    <label>Replacement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Replacement</fullName>
            </value>
            <value>
                <fullName>Reship Only ( Free of Charge )</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>