force-app/main/default/objects/Part__c/fields/Service_Field_Guide_URL__c.field-meta.xml
<CustomField>
    <fullName>Service_Field_Guide_URL__c</fullName>
    <description>SDS-1686 :Provide a link to the Service Field Guide based on the part selected on an RMA</description>
    <label>Service Field Guide URL</label>
    <type>Url</type>
</CustomField>