force-app/main/default/objects/Part__c/fields/Service_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Service_Instructions__c</fullName>
    <label>Service Instructions</label>
    <length>64768</length>
    <type>Html</type>
</CustomField>