force-app/main/default/objects/Part__c/fields/TransDateTime__c.field-meta.xml
<CustomField>
    <fullName>TransDateTime__c</fullName>
    <label>TransDateTime</label>
    <type>DateTime</type>
</CustomField>