force-app/main/default/objects/Part__c/listViews/All_PK.listView-meta.xml
<ListView>
    <fullName>All_PK</fullName>
    <columns>Description__c</columns>
    <columns>NAME</columns>
    <columns>Part_Number__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Full_System__c</columns>
    <columns>Replacement_Type__c</columns>
    <columns>FRU_CRU__c</columns>
    <columns>Active__c</columns>
    <columns>Orderable__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All-PK</label>
    <language>en_US</language>
</ListView>